dbahsql_lib = shared_library('dbahsql',
  'source/filter/hsqldb/hsqlimport.cxx',
  'source/filter/hsqldb/parseschema.cxx',
  'source/filter/hsqldb/alterparser.cxx',
  'source/filter/hsqldb/createparser.cxx',
  'source/filter/hsqldb/columndef.cxx',
  'source/filter/hsqldb/fbalterparser.cxx',
  'source/filter/hsqldb/fbcreateparser.cxx',
  'source/filter/hsqldb/rowinputbinary.cxx',
  'source/filter/hsqldb/hsqlbinarynode.cxx',
  'source/filter/hsqldb/utils.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    sal_lib,
    salhelper_lib,
    dbtools_lib,
    ucbhelper_lib,
    utl_lib,
    tl_lib,
  ],
  dependencies: [boost_datetime_dep],
  install: true,
)

dba_lib = shared_library('dbalo',
  'source/core/api/BookmarkSet.cxx',
  'source/core/api/CacheSet.cxx',
  'source/core/api/callablestatement.cxx',
  'source/core/api/CIndexes.cxx',
  'source/core/api/column.cxx',
  'source/core/api/columnsettings.cxx',
  'source/core/api/CRowSetColumn.cxx',
  'source/core/api/CRowSetDataColumn.cxx',
  'source/core/api/datacolumn.cxx',
  'source/core/api/datasettings.cxx',
  'source/core/api/definitioncolumn.cxx',
  'source/core/api/FilteredContainer.cxx',
  'source/core/api/HelperCollections.cxx',
  'source/core/api/KeySet.cxx',
  'source/core/api/OptimisticSet.cxx',
  'source/core/api/preparedstatement.cxx',
  'source/core/api/PrivateRow.cxx',
  'source/core/api/query.cxx',
  'source/core/api/querycomposer.cxx',
  'source/core/api/querycontainer.cxx',
  'source/core/api/querydescriptor.cxx',
  'source/core/api/resultcolumn.cxx',
  'source/core/api/resultset.cxx',
  'source/core/api/RowSet.cxx',
  'source/core/api/RowSetBase.cxx',
  'source/core/api/RowSetCache.cxx',
  'source/core/api/RowSetCacheIterator.cxx',
  'source/core/api/SingleSelectQueryComposer.cxx',
  'source/core/api/statement.cxx',
  'source/core/api/StaticSet.cxx',
  'source/core/api/table.cxx',
  'source/core/api/tablecontainer.cxx',
  'source/core/api/TableDeco.cxx',
  'source/core/api/View.cxx',
  'source/core/api/viewcontainer.cxx',
  'source/core/api/WrappedResultSet.cxx',
  'source/core/dataaccess/bookmarkcontainer.cxx',
  'source/core/dataaccess/commandcontainer.cxx',
  'source/core/dataaccess/commanddefinition.cxx',
  'source/core/dataaccess/ComponentDefinition.cxx',
  'source/core/dataaccess/connection.cxx',
  'source/core/dataaccess/ContentHelper.cxx',
  'source/core/dataaccess/dataaccessdescriptor.cxx',
  'source/core/dataaccess/databasecontext.cxx',
  'source/core/dataaccess/databasedocument.cxx',
  'source/core/dataaccess/databaseregistrations.cxx',
  'source/core/dataaccess/datasource.cxx',
  'source/core/dataaccess/definitioncontainer.cxx',
  'source/core/dataaccess/documentcontainer.cxx',
  'source/core/dataaccess/documentdefinition.cxx',
  'source/core/dataaccess/documenteventexecutor.cxx',
  'source/core/dataaccess/documenteventnotifier.cxx',
  'source/core/dataaccess/documentevents.cxx',
  'source/core/dataaccess/intercept.cxx',
  'source/core/dataaccess/ModelImpl.cxx',
  'source/core/dataaccess/myucp_datasupplier.cxx',
  'source/core/dataaccess/myucp_resultset.cxx',
  'source/core/dataaccess/SharedConnection.cxx',
  'source/core/misc/apitools.cxx',
  'source/core/misc/ContainerMediator.cxx',
  'source/core/misc/DatabaseDataProvider.cxx',
  'source/core/misc/dsntypes.cxx',
  'source/core/misc/objectnameapproval.cxx',
  'source/core/misc/migrwarndlg.cxx',
  'source/core/misc/PropertyForward.cxx',
  'source/core/misc/sdbcoretools.cxx',
  'source/core/misc/services.cxx',
  'source/core/misc/veto.cxx',
  'source/core/recovery/dbdocrecovery.cxx',
  'source/core/recovery/settingsimport.cxx',
  'source/core/recovery/storagestream.cxx',
  'source/core/recovery/storagetextstream.cxx',
  'source/core/recovery/storagexmlstream.cxx',
  'source/core/recovery/subcomponentloader.cxx',
  'source/core/recovery/subcomponentrecovery.cxx',
  'source/core/resource/core_resource.cxx',
  sql_bison,
  udk_fake_h, off_fake_h,
  cpp_args: ['-DOOO_DLLIMPLEMENTATION_DBA',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc', 'source/core/inc', 'source/filter/hsqldb'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    dbahsql_lib,
    dbtools_lib,
    fwe_lib,
    i18nlangtag_lib,
    sal_lib,
    salhelper_lib,
    sax_lib,
    sb_lib,
    sfx_lib,
    svl_lib,
    svt_lib,
    svxcore_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
    xo_lib,
  ],
  dependencies: [],
  install: true,
)

dbu_lib = shared_library('dbulo',
  'source/shared/dbu_reghelper.cxx',
  'source/ui/app/AppController.cxx',
  'source/ui/app/AppControllerDnD.cxx',
  'source/ui/app/AppControllerGen.cxx',
  'source/ui/app/AppDetailPageHelper.cxx',
  'source/ui/app/AppDetailView.cxx',
  'source/ui/app/AppIconControl.cxx',
  'source/ui/app/AppSwapWindow.cxx',
  'source/ui/app/AppTitleWindow.cxx',
  'source/ui/app/AppView.cxx',
  'source/ui/app/subcomponentmanager.cxx',
  'source/ui/browser/AsynchronousLink.cxx',
  'source/ui/browser/brwctrlr.cxx',
  'source/ui/browser/brwview.cxx',
  'source/ui/browser/dataview.cxx',
  'source/ui/browser/dbexchange.cxx',
  'source/ui/browser/dbloader.cxx',
  'source/ui/browser/dbtreemodel.cxx',
  'source/ui/browser/dbtreeview.cxx',
  'source/ui/browser/dsbrowserDnD.cxx',
  'source/ui/browser/dsEntriesNoExp.cxx',
  'source/ui/browser/exsrcbrw.cxx',
  'source/ui/browser/formadapter.cxx',
  'source/ui/browser/genericcontroller.cxx',
  'source/ui/browser/sbagrid.cxx',
  'source/ui/browser/sbamultiplex.cxx',
  'source/ui/browser/unodatbr.cxx',
  'source/ui/control/charsetlistbox.cxx',
  'source/ui/control/ColumnControlWindow.cxx',
  'source/ui/control/curledit.cxx',
  'source/ui/control/dbtreelistbox.cxx',
  'source/ui/control/FieldControls.cxx',
  'source/ui/control/FieldDescControl.cxx',
  'source/ui/control/listviewitems.cxx',
  'source/ui/control/marktree.cxx',
  'source/ui/control/opendoccontrols.cxx',
  'source/ui/control/RelationControl.cxx',
  'source/ui/control/ScrollHelper.cxx',
  'source/ui/control/sqledit.cxx',
  'source/ui/control/SqlNameEdit.cxx',
  'source/ui/control/TableGrantCtrl.cxx',
  'source/ui/control/tabletree.cxx',
  'source/ui/control/undosqledit.cxx',
  'source/ui/control/VertSplitView.cxx',
  'source/ui/dlg/admincontrols.cxx',
  'source/ui/dlg/adminpages.cxx',
  'source/ui/dlg/adtabdlg.cxx',
  'source/ui/dlg/advancedsettings.cxx',
  'source/ui/dlg/CollectionView.cxx',
  'source/ui/dlg/ConnectionHelper.cxx',
  'source/ui/dlg/ConnectionPage.cxx',
  'source/ui/dlg/ConnectionPageSetup.cxx',
  'source/ui/dlg/dbadmin.cxx',
  'source/ui/dlg/DbAdminImpl.cxx',
  'source/ui/dlg/dbfindex.cxx',
  'source/ui/dlg/DBSetupConnectionPages.cxx',
  'source/ui/dlg/dbwiz.cxx',
  'source/ui/dlg/dbwizsetup.cxx',
  'source/ui/dlg/detailpages.cxx',
  'source/ui/dlg/directsql.cxx',
  'source/ui/dlg/dlgattr.cxx',
  'source/ui/dlg/dlgsave.cxx',
  'source/ui/dlg/dlgsize.cxx',
  'source/ui/dlg/dsselect.cxx',
  'source/ui/dlg/finteraction.cxx',
  'source/ui/dlg/generalpage.cxx',
  'source/ui/dlg/indexdialog.cxx',
  'source/ui/dlg/indexfieldscontrol.cxx',
  'source/ui/dlg/odbcconfig.cxx',
  'source/ui/dlg/optionalboolitem.cxx',
  'source/ui/dlg/paramdialog.cxx',
  'source/ui/dlg/queryfilter.cxx',
  'source/ui/dlg/queryorder.cxx',
  'source/ui/dlg/QueryPropertiesDialog.cxx',
  'source/ui/dlg/RelationDlg.cxx',
  'source/ui/dlg/sqlmessage.cxx',
  'source/ui/dlg/tablespage.cxx',
  'source/ui/dlg/TablesSingleDlg.cxx',
  'source/ui/dlg/TextConnectionHelper.cxx',
  'source/ui/dlg/textconnectionsettings.cxx',
  'source/ui/dlg/UserAdmin.cxx',
  'source/ui/dlg/UserAdminDlg.cxx',
  'source/ui/misc/asyncmodaldialog.cxx',
  'source/ui/misc/charsets.cxx',
  'source/ui/misc/controllerframe.cxx',
  'source/ui/misc/databaseobjectview.cxx',
  'source/ui/misc/datasourceconnector.cxx',
  'source/ui/misc/dbaundomanager.cxx',
  'source/ui/misc/dbsubcomponentcontroller.cxx',
  'source/ui/misc/defaultobjectnamecheck.cxx',
  'source/ui/misc/DExport.cxx',
  'source/ui/misc/dsmeta.cxx',
  'source/ui/misc/HtmlReader.cxx',
  'source/ui/misc/imageprovider.cxx',
  'source/ui/misc/indexcollection.cxx',
  'source/ui/misc/linkeddocuments.cxx',
  'source/ui/misc/propertystorage.cxx',
  'source/ui/misc/RowSetDrop.cxx',
  'source/ui/misc/RtfReader.cxx',
  'source/ui/misc/singledoccontroller.cxx',
  'source/ui/misc/stringlistitem.cxx',
  'source/ui/misc/TableCopyHelper.cxx',
  'source/ui/misc/TokenWriter.cxx',
  'source/ui/misc/uiservices.cxx',
  'source/ui/misc/UITools.cxx',
  'source/ui/misc/WColumnSelect.cxx',
  'source/ui/misc/WCopyTable.cxx',
  'source/ui/misc/WCPage.cxx',
  'source/ui/misc/WExtendPages.cxx',
  'source/ui/misc/WNameMatch.cxx',
  'source/ui/misc/WTypeSelect.cxx',
  'source/ui/querydesign/ConnectionLine.cxx',
  'source/ui/querydesign/ConnectionLineAccess.cxx',
  'source/ui/querydesign/ConnectionLineData.cxx',
  'source/ui/querydesign/JAccess.cxx',
  'source/ui/querydesign/JoinController.cxx',
  'source/ui/querydesign/JoinDesignView.cxx',
  'source/ui/querydesign/JoinExchange.cxx',
  'source/ui/querydesign/JoinTableView.cxx',
  'source/ui/querydesign/LimitBox.cxx',
  'source/ui/querydesign/limitboxcontroller.cxx',
  'source/ui/querydesign/QTableConnection.cxx',
  'source/ui/querydesign/QTableConnectionData.cxx',
  'source/ui/querydesign/QTableWindow.cxx',
  'source/ui/querydesign/QTableWindowData.cxx',
  'source/ui/querydesign/querycontainerwindow.cxx',
  'source/ui/querydesign/querycontroller.cxx',
  'source/ui/querydesign/QueryDesignView.cxx',
  'source/ui/querydesign/querydlg.cxx',
  'source/ui/querydesign/QueryMoveTabWinUndoAct.cxx',
  'source/ui/querydesign/QueryTabConnUndoAction.cxx',
  'source/ui/querydesign/QueryTableView.cxx',
  'source/ui/querydesign/QueryTabWinUndoAct.cxx',
  'source/ui/querydesign/QueryTextView.cxx',
  'source/ui/querydesign/QueryViewSwitch.cxx',
  'source/ui/querydesign/SelectionBrowseBox.cxx',
  'source/ui/querydesign/TableConnection.cxx',
  'source/ui/querydesign/TableConnectionData.cxx',
  'source/ui/querydesign/TableFieldDescription.cxx',
  'source/ui/querydesign/TableFieldInfo.cxx',
  'source/ui/querydesign/TableWindow.cxx',
  'source/ui/querydesign/TableWindowAccess.cxx',
  'source/ui/querydesign/TableWindowData.cxx',
  'source/ui/querydesign/TableWindowListBox.cxx',
  'source/ui/querydesign/TableWindowTitle.cxx',
  'source/ui/relationdesign/RelationController.cxx',
  'source/ui/relationdesign/RelationDesignView.cxx',
  'source/ui/relationdesign/RelationTableView.cxx',
  'source/ui/relationdesign/RTableConnection.cxx',
  'source/ui/relationdesign/RTableConnectionData.cxx',
  'source/ui/tabledesign/FieldDescGenWin.cxx',
  'source/ui/tabledesign/FieldDescriptions.cxx',
  'source/ui/tabledesign/TableController.cxx',
  'source/ui/tabledesign/TableDesignControl.cxx',
  'source/ui/tabledesign/TableDesignHelpBar.cxx',
  'source/ui/tabledesign/TableDesignView.cxx',
  'source/ui/tabledesign/TableFieldControl.cxx',
  'source/ui/tabledesign/TableFieldDescWin.cxx',
  'source/ui/tabledesign/TableRow.cxx',
  'source/ui/tabledesign/TableRowExchange.cxx',
  'source/ui/tabledesign/TableUndo.cxx',
  'source/ui/tabledesign/TEditControl.cxx',
  'source/ui/uno/admindlg.cxx',
  'source/ui/uno/AdvancedSettingsDlg.cxx',
  'source/ui/uno/ColumnControl.cxx',
  'source/ui/uno/ColumnModel.cxx',
  'source/ui/uno/ColumnPeer.cxx',
  'source/ui/uno/composerdialogs.cxx',
  'source/ui/uno/copytablewizard.cxx',
  'source/ui/uno/dbinteraction.cxx',
  'source/ui/uno/DBTypeWizDlg.cxx',
  'source/ui/uno/DBTypeWizDlgSetup.cxx',
  'source/ui/uno/TableFilterDlg.cxx',
  'source/ui/uno/textconnectionsettings_uno.cxx',
  'source/ui/uno/unoadmin.cxx',
  'source/ui/uno/unoDirectSql.cxx',
  'source/ui/uno/unosqlmessage.cxx',
  'source/ui/uno/UserSettingsDlg.cxx',
  udk_fake_h, off_fake_h, common_hxx,
  cpp_args: ['-DDBACCESS_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc', 'source/ui/inc', setup_inc, '../connectivity'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    dba_lib,
    dbtools_lib,
    editeng_lib,
    fwe_lib,
    sal_lib,
    salhelper_lib,
    i18nlangtag_lib,
    sfx_lib,
    sot_lib,
    svl_lib,
    svt_lib,
    svxcore_lib,
    svx_lib,
    tk_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
  ],
  dependencies: [odbc_dep],
  install: true,
)

dbaxml_lib = shared_library('dbaxmllo',
  'source/filter/xml/dbloader2.cxx',
  'source/filter/xml/xmlAutoStyle.cxx',
  'source/filter/xml/xmlColumn.cxx',
  'source/filter/xml/xmlComponent.cxx',
  'source/filter/xml/xmlConnectionData.cxx',
  'source/filter/xml/xmlConnectionResource.cxx',
  'source/filter/xml/xmlDatabase.cxx',
  'source/filter/xml/xmlDatabaseDescription.cxx',
  'source/filter/xml/xmlDataSource.cxx',
  'source/filter/xml/xmlDataSourceInfo.cxx',
  'source/filter/xml/xmlDataSourceSetting.cxx',
  'source/filter/xml/xmlDataSourceSettings.cxx',
  'source/filter/xml/xmlDocuments.cxx',
  'source/filter/xml/xmlExport.cxx',
  'source/filter/xml/xmlFileBasedDatabase.cxx',
  'source/filter/xml/xmlfilter.cxx',
  'source/filter/xml/xmlHelper.cxx',
  'source/filter/xml/xmlHierarchyCollection.cxx',
  'source/filter/xml/xmlLogin.cxx',
  'source/filter/xml/xmlQuery.cxx',
  'source/filter/xml/xmlServerDatabase.cxx',
  'source/filter/xml/xmlservices.cxx',
  'source/filter/xml/xmlStyleImport.cxx',
  'source/filter/xml/xmlTable.cxx',
  'source/filter/xml/xmlTableFilterList.cxx',
  'source/filter/xml/xmlTableFilterPattern.cxx',
  'source/shared/flt_reghelper.cxx',
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    dba_lib,
    dbtools_lib,
    sal_lib,
    salhelper_lib,
    sax_lib,
    sfx_lib,
    svl_lib,
    tk_lib,
    tl_lib,
    utl_lib,
    vcl_lib,
    xo_lib,
  ],
  dependencies: [],
  gnu_symbol_visibility: 'hidden',
  install: true,
)
