deploymentmisc_lib = shared_library('deploymentmisc',
  'source/deployment/misc/dp_dependencies.cxx',
  'source/deployment/misc/dp_descriptioninfoset.cxx',
  'source/deployment/misc/dp_identifier.cxx',
  'source/deployment/misc/dp_interact.cxx',
  'source/deployment/misc/dp_misc.cxx',
  'source/deployment/misc/dp_platform.cxx',
  'source/deployment/misc/dp_resource.cxx',
  'source/deployment/misc/dp_ucb.cxx',
  'source/deployment/misc/dp_update.cxx',
  'source/deployment/misc/dp_version.cxx',
  'source/deployment/misc/lockfile.cxx',
   udk_fake_h, off_fake_h,
  cpp_args: ['-DESKTOP_DEPLOYMENTMISC_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/deployment/inc'],
  link_with: [comphelper_lib, cppuhelper_lib, cppu_lib, sal_lib, tl_lib, ucbhelper_lib, utl_lib, vcl_lib, xmlscript_lib, i18nlangtag_lib],
  dependencies: [],
)

sofficeapp_lib = shared_library('sofficeapp',
  'source/app/app.cxx',
  'source/app/appinit.cxx',
  'source/app/check_ext_deps.cxx',
  'source/app/cmdlineargs.cxx',
  'source/app/cmdlinehelp.cxx',
  'source/app/desktopcontext.cxx',
  'source/app/dispatchwatcher.cxx',
  'source/app/langselect.cxx',
  'source/app/lockfile2.cxx',
  'source/app/officeipcthread.cxx',
  'source/app/opencl.cxx',
  'source/app/sofficemain.cxx',
  'source/app/userinstall.cxx',
  'source/migration/migration.cxx',
  udk_fake_h, off_fake_h, setup_hxx, common_hxx, linguistic_hxx, update_hxx, calc_hxx,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/deployment/inc', setup_inc],
  link_with: [glxtest_lib, comphelper_lib, cppuhelper_lib, cppu_lib, deploymentmisc_lib, editeng_lib, i18nlangtag_lib, sal_lib, salhelper_lib, sb_lib, sfx_lib, svl_lib, svx_lib, svxcore_lib, svt_lib, tk_lib, tl_lib, ucbhelper_lib, utl_lib, vcl_lib],
  dependencies: [dbus_dep],
)

soffice_bin = executable('soffice', 'source/app/main.c',
  include_directories: [main_inc],
  link_with: [sofficeapp_lib, sal_lib],
)

