deploymentmisc_lib = shared_library('deploymentmisc',
  'source/deployment/misc/dp_dependencies.cxx',
  'source/deployment/misc/dp_descriptioninfoset.cxx',
  'source/deployment/misc/dp_identifier.cxx',
  'source/deployment/misc/dp_interact.cxx',
  'source/deployment/misc/dp_misc.cxx',
  'source/deployment/misc/dp_platform.cxx',
  'source/deployment/misc/dp_resource.cxx',
  'source/deployment/misc/dp_ucb.cxx',
  'source/deployment/misc/dp_update.cxx',
  'source/deployment/misc/dp_version.cxx',
  'source/deployment/misc/lockfile.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DESKTOP_DEPLOYMENTMISC_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/deployment/inc'],
  link_with: [comphelper_lib, cppuhelper_lib, cppu_lib, sal_lib, tl_lib, ucbhelper_lib, utl_lib, vcl_lib, xmlscript_lib, i18nlangtag_lib],
  dependencies: [],
  install: true,
)

crashreport_lib = shared_library('crashlib',
  'source/app/crashreport.cxx',
  'source/minidump/minidump.cxx',
   udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY',
             '-DCRASHREPORT_DLLIMPLEMENTATION'],
  include_directories: [main_inc, udkh_inc, offapi_inc],
  link_with: [],
  dependencies: [curl_dep],
  install: true,
)

unopkgapp_lib = shared_library('unopkgapp',
  'source/pkgchk/unopkg/unopkg_app.cxx',
  'source/pkgchk/unopkg/unopkg_cmdenv.cxx',
  'source/pkgchk/unopkg/unopkg_misc.cxx',

  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY',
             '-DDESKTOP_DLLIMPLEMENTATION'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/deployment/inc'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    deploymentmisc_lib,
    sal_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
    i18nlangtag_lib,
  ],
  dependencies: [],
  install: true,
)

sofficeapp_lib = shared_library('sofficeapp',
  'source/app/app.cxx',
  'source/app/appinit.cxx',
  'source/app/check_ext_deps.cxx',
  'source/app/cmdlineargs.cxx',
  'source/app/cmdlinehelp.cxx',
  'source/app/desktopcontext.cxx',
  'source/app/dispatchwatcher.cxx',
  'source/app/langselect.cxx',
  'source/app/lockfile2.cxx',
  'source/app/officeipcthread.cxx',
  'source/app/opencl.cxx',
  'source/app/sofficemain.cxx',
  'source/app/userinstall.cxx',
  'source/migration/migration.cxx',
  udk_fake_h, off_fake_h, setup_hxx, common_hxx, linguistic_hxx, update_hxx, calc_hxx,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/deployment/inc', setup_inc],
  link_with: [glxtest_lib, comphelper_lib, cppuhelper_lib, cppu_lib, deploymentmisc_lib, editeng_lib, i18nlangtag_lib, sal_lib, salhelper_lib, sb_lib, sfx_lib, svl_lib, svx_lib, svxcore_lib, svt_lib, tk_lib, tl_lib, ucbhelper_lib, utl_lib, vcl_lib],
  dependencies: [dbus_dep],
  install: true,
)

soffice_bin = executable('soffice', 'source/app/main.c',
  include_directories: [main_inc],
  link_with: [sofficeapp_lib, sal_lib],
  install: true,
)

minidump_bin = executable('minidump_upload',
  'source/minidump/minidump_upload.cxx',
  include_directories: [main_inc],
  link_with: [crashreport_lib, sal_lib],
  install: true,
)

unopkg_bin = executable('unopkg',
  'source/pkgchk/unopkg/unopkg_main.c',
  include_directories: [main_inc],
  link_with: [sal_lib, comphelper_lib, tl_lib, unopkgapp_lib],
  install: true,
)

oosplash_bin = executable('oosplash',
  'unx/source/args.c',
  'unx/source/file_image_unx.c',
  'unx/source/pagein.c',
  'unx/source/splashx.c',
  'unx/source/start.c',
  include_directories: [main_inc],
  link_with: [sal_lib],
  install: true,
)

spl_lib = shared_library('spllo',
  'source/splash/services_spl.cxx',
  'source/splash/splash.cxx',
  'source/splash/unxsplash.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    sal_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
  ],
  dependencies: [],
  install: true,
)

deployment_lib = shared_library('deployment',
  'source/deployment/dp_log.cxx',
  'source/deployment/dp_persmap.cxx',
  'source/deployment/dp_services.cxx',
  'source/deployment/dp_xml.cxx',
  'source/deployment/manager/dp_activepackages.cxx',
  'source/deployment/manager/dp_commandenvironments.cxx',
  'source/deployment/manager/dp_extensionmanager.cxx',
  'source/deployment/manager/dp_informationprovider.cxx',
  'source/deployment/manager/dp_manager.cxx',
  'source/deployment/manager/dp_managerfac.cxx',
  'source/deployment/manager/dp_properties.cxx',
  'source/deployment/registry/component/dp_compbackenddb.cxx',
  'source/deployment/registry/component/dp_component.cxx',
  'source/deployment/registry/configuration/dp_configuration.cxx',
  'source/deployment/registry/configuration/dp_configurationbackenddb.cxx',
  'source/deployment/registry/dp_backend.cxx',
  'source/deployment/registry/dp_backenddb.cxx',
  'source/deployment/registry/dp_registry.cxx',
  'source/deployment/registry/executable/dp_executable.cxx',
  'source/deployment/registry/executable/dp_executablebackenddb.cxx',
  'source/deployment/registry/help/dp_help.cxx',
  'source/deployment/registry/help/dp_helpbackenddb.cxx',
  'source/deployment/registry/package/dp_extbackenddb.cxx',
  'source/deployment/registry/package/dp_package.cxx',
  'source/deployment/registry/script/dp_lib_container.cxx',
  'source/deployment/registry/script/dp_script.cxx',
  'source/deployment/registry/script/dp_scriptbackenddb.cxx',
  'source/deployment/registry/sfwk/dp_parceldesc.cxx',
  'source/deployment/registry/sfwk/dp_sfwk.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/deployment/inc', 'source/deployment/registry/inc'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    deploymentmisc_lib,
    sal_lib,
    svl_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
    xmlscript_lib,
    i18nlangtag_lib,
    helplinker_lib,
  ],
  dependencies: [],
  gnu_symbol_visibility: 'hidden',
  install: true,
)
